fixed padding on small window

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,12 +6,10 @@ body {
 }
 
 main {
+  margin: 0 10%;
+  padding: 5% 10%;
   background-color: white;
-  width: 800px;
-  margin: auto;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  border: thin black solid;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 p {
     padding-left: 15%;
